# embedded-day-one

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bootstrap  bootstrap.cmd  generate  generate.cmd  onboarding.md  pico_toolchain.cmake  roadmap.md  run-tests  run-tests.cmd  run-tests.sh  table.htm  windows-shim.cmd
.github/workflows/: test.yml
core/: CMakeLists.txt  rpc.c  rpc.h  transport.h
e2e/: hil_test.py
firmware/: main.c  transport_pico.c
test/: CMakeLists.txt
test/fakes/serial/: CMakeLists.txt  serial.h  serial_fake.cpp
test/fakes/transport/: CMakeLists.txt  transport_fake.cpp  transport_fake.h
test/src/: protocol_test.cpp  rpc_test.cpp  test_main.cpp
